--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "crypto-js": "^4.2.0",
     "element-plus": "^2.12.0",
     "pinia": "^3.0.4",
     "vue": "^3.5.24",
